# easy_smtp

./: .gitignore  README.md  setup.cfg
src/easy_smtp/: EasySMTP.py  __init__.py
src/tests/: run_tests.py
